<resources>
    <string name="app_name">Flyff Manager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_manager">Flyff Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">HOME</string>
    <string name="upgrades">Upgrades</string>
    <string name="upgradechance">Upgradechance</string>
    <string name="scrollanzahl">Scrollanzahl</string>
    <string name="schadensberechnung_skills">Schadensberechnung (Skills)</string>
    <string name="gem_tlich_leveln">Gemütlich Leveln</string>
    <string name="wcoin_rechner">WCoin Rechner</string>
    <string name="support">Support</string>
    <string name="handel">Handel</string>
    <string name="charakter">Charakter</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="by_gl_cksklee_and_yourfriendlyrm">by Glücksklee and Löwentatze</string>
    <string name="aktuelle_stufe">Aktuelle Stufe</string>
    <string name="wunschstufe">Wunschstufe</string>
    <string name="wahrscheinlichkeit_in">Wahrscheinlichkeit (in %)</string>
    <string name="upgrade_chancen">Upgrade Chancen</string>
    <string name="berechnen">Berechnen</string>
    <string name="ergebnis">ERGEBNIS</string>
    <string name="charakterdaten">Charakterdaten</string>
    <string name="level">Level</string>
    <string name="amps" translatable="false">AMPS</string>
    <string name="event">EVENT</string>
    <string name="exp_need">EXP NEED</string>
    <string name="leech">LEECH</string>
    <string name="monsterinformationen">Monsterinformationen</string>
    <string name="mobname">MOBNAMe</string>
    <string name="moblvl">MOBLVL</string>
    <string name="mobhp">MOBHP</string>
    <string name="mob_ele">MOB ELE</string>
    <string name="auswertung">Auswertung</string>
    <string name="mobskill">MOBSKILL</string>
    <string name="mobexp">MOBEXP</string>
    <string name="estimatedtime">ESTIMATEDTIME</string>
    <string name="timeper5mobs">TIMEPER5MOBS</string>
    <string name="exppromob">EXPPROMOB</string>
    <string name="asalralaaikum_oder_hit_of_penya">Asalralaaikum oder Hit of Penya?</string>
    <string name="schreib_mir_dazu_entweder_eine_e_mail_an_gaming_julian94_gmail_com">Schreib mir dazu entweder eine E-Mail an gaming.julian94@gmail.com</string>
    <string name="oder_auf_dem_server_murano_an">Oder auf dem Server Murano an</string>
    <string name="herzlich_willkommen_n_ndas_ist_der_erste_entwurf_vom_flyff_manager_n_nschau_doch_mal_ins_men_und_klick_dich_durch_n_n_ber_feedback_w_rde_ich_mich_riesig_freuen">Herzlich Willkommen,\n\ndas ist der erste Entwurf vom Flyff Manager.\n\nSchau doch mal ins Menü und klick Dich durch.\n\nÜber Feedback würde ich mich riesig freuen!</string>
    <string name="yourfriendlyrm">Yourfriendlyrm</string>
    <string name="monsterdaten">Monsterdaten</string>
    <string name="monsterlvl">MonsterLVL</string>
    <string name="element">ELEMENT</string>
    <string name="monster_hp">monster HP</string>
    <string name="aktuelles_level">aktuelles Level</string>
    <string name="master_hero">Master/Hero</string>
    <string name="level_1_leech">Level 1 Leech</string>
    <string name="spielerdaten">Spielerdaten</string>
    <string name="bonus_durch_scrolls">Bonus durch Scrolls</string>
    <string name="bonus_durch_event">Bonus durch Event</string>
    <string name="analysieren">Analysieren</string>
    <string name="in_welchem_gebiet_levelst_du">In welchem Gebiet levelst du?</string>
    <string name="anzahl_schutzrollen">Anzahl Schutzrollen</string>
    <string name="source_http_www_elitepvpers_com_forum_flyff_main_discussions_questions_704040_flyff_upgrade_rates_html" translatable="false">Source: http://www.elitepvpers.com/forum/flyff-main-discussions-questions/704040-flyff-upgrade-rates.html</string>
    <string name="bitte_f_lle_2_von_3_feldern_aus">Bitte fülle 2 von 3 Feldern aus.</string>
    <string name="penya_pro_100_wcoins_in_millionen">Penya pro 100 Wcoins (in Millionen)</string>
    <string name="anzahl_wcoins">Anzahl WCoins</string>
    <string name="anzahl_penya_in_millionen">Anzahl Penya (in Millionen)</string>
    <string name="fehlenden_wert_berechnen">fehlenden Wert berechnen</string>
    <string name="asal" translatable="false">Asalralaaikum</string>
    <string name="hop">Hit of Penya</string>
    <string name="pls_fill_in_values">Bitte gib deine entsprechenden Werte ein.</string>
    <string name="str">STR-Wert</string>
    <string name="mp">MP-Wert</string>
    <string name="atk">Attack-Wert</string>
    <string name="min_1_value_missing">Mindestens ein Wert fehlt.</string>
    <string name="asalpve">"Asal vs. Monster:  "</string>
    <string name="asalpvp">"\nAsal vs. Player: "</string>
    <string name="hoppve">"HoP vs. Monster:  "</string>
    <string name="hoppvm">"\nHoP vs. Player: "</string>
    <string name="whichmonster">Welches Monster tötest du gerade?</string>
    <string name="whichlvl">Welches Level bist du momentan?</string>
    <string name="im_hero">Ich bin sogar schon Master/Hero!</string>
    <string name="next">Weiter</string>
    <string name="too_high">Das ist zu hoch!</string>
    <string name="pls_fill_in_lvl">Bitte trage ein Level ein.</string>
    <string name="have_leech">Hast du einen Leecher?</string>
    <string name="yes">Ja hab ich!</string>
    <string name="no_leech">Nein ich war zu faul mir einen zu suchen.</string>
    <string name="lvl_1_leech">Der ist sogar Level 1!</string>
    <string name="getting_leveled">Ich werd grad gelevelt</string>
    <string name="is_exp_event">Läuft gerade ein EXP-Event?</string>
    <string name="no_exp_event">Leider nicht&#8230;</string>
    <string name="exp_times_2">2-Fach EXP.</string>
    <string name="exp_times_3">3-Fach EXP!</string>
    <string name="exp_in_">Ansonsten bitte in % angeben.</string>
    <string name="have_exp_scrolls">Hast du gerade EXP-Scrolls aktiv?</string>
    <string name="no_scrolls">Nein&#8230;</string>
    <string name="scroll_50">Die eine grüne (50%).</string>
    <string name="scroll_250">5 stapelbare ES(S) (250%)</string>
    <string name="scroll_500">5 XR aus dem Cashshop (Lila) (500%)</string>
    <string name="scroll_1000">5 Scrolls of Experience Ultra (1000%)</string>
    <string name="level_art">Auf welche Art levelst du?</string>
    <string name="one_vs_one">1 vs 1</string>
    <string name="aoe">AoE - Mehrere Monster auf einmal</string>
    <string name="leveling_1o1_kill5">Du levelst 1o1. Bitte starte den Timer und töte dann 5 Monster.</string>
    <string name="kill_5_monster_stop">Töte 5 Monster und stoppe dann den Timer</string>
    <string name="stop_timer">Timer stop</string>
    <string name="start_timer">Timer starten</string>
    <string name="leveling_aoe">Du levelst AoE. Bitte zähle die Monster und stoppe einen AoE lang die Zeit.</string>
    <string name="stop_and_count">Drücke Stop sobald alle gesammelten Monster tot sind. Vergiss nicht mitzuzählen!</string>
    <string name="how_many_mobs">Wie viele Monster hast du gerade getötet?</string>
    <string name="anzahl_monster">Anzahl getöter Monster</string>
    <string name="finish">Fertig</string>
    <string name="link_to_app">\nHier ist der Link zum neuen Flyffmanager:\n\n</string>
    <string name="have_fun_testing">Viel Spaß beim Testen!</string>
    <string name="link" translatable="false">https://play.google.com/apps/testing/com.klinger2709.klingerju.flyffmanager\n\n</string>
    <string name="pls_choose">Bitte auswählen</string>
    <string name="pls_all_fields">Bitte alle Felder ausfüllen</string>
    <string name="not_possible">Negativupgrades nicht möglich</string>
    <string name="no_valid_value">Ungültiger Wert</string>
    <string name="u_will_need">"Du wirst ca. "</string>
    <string name="need_scrolls">" Scrolls brauchen."</string>
    <string name="calc_scrolls">Scrollanzahl berechnen</string>
    <string name="lvl">"Level: "</string>
    <string name="exp_through_scrolls">"EXP durch Scrolls: "</string>
    <string name="exp_needed">"EXP benötigt: "</string>
    <string name="exp_trhough_event">"EXP durch Event: "</string>
    <string name="exp_through_leech">"EXP durch Leech: "</string>
    <string name="mob_ll">"Monsterlevel: "</string>
    <string name="hp">"HP: "</string>
    <string name="element_">"Element: "</string>
    <string name="death">"Tötung gibt "</string>
    <string name="mobs_to_kill">Monster zu töten: \t</string>
    <string name="time_for">"Zeit für "</string>
    <string name="mobs">" Monster: \t"</string>
    <string name="time_for_lvl_up">Zeit für Level-up: \t</string>
    <string name="exp_per_kill_in_">EXP pro Tötung in %: \t</string>
    <string name="calc_upgrade_chance">Upgradechance berechnen</string>
    <string name="scrolls_will_reach_">" Scrolls reichen zu "</string>
    <string name="for_an_upgrade">"% für ein Upgrade auf Stufe "</string>
    <string name="aus">" aus."</string>
    <string name="pls_check_input">Bitte überprüfe die Eingabe</string>
    <string name="wc_calc">WCoin Rechner</string>
    <string name="pls_fill_in_one_more">Bitte ergänze ein weiteres Feld.</string>
    <string name="what_to_calc">Welchen Wert möchtest du berechnen?</string>
    <string name="kurs">Kurs</string>
    <string name="wcs">WCoins</string>
    <string name="peny">Penya</string>

    <string-array name="upgrading_items">
        <item>Schmuck</item>
        <item>Rüstung Sockeln</item>
        <item>Rüstung/Waffe upgraden</item>
        <item>Waffe Sockeln</item>
        <item>Rüstung/Waffe Element</item>
        <item>Waffe Ultimate</item>
    </string-array>

    <string-array name="areas">
        <item>Tower</item>
        <item>Azria</item>
        <item>Rartesia</item>
        <item>Dark Rartesia</item>
    </string-array>


</resources>
