<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.klinger2709.klingerju.flyffmanager.LevelFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/area_chooser" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_chooser"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/monster_chooser" />

        <TextView
            android:text="@string/monsterdaten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/monster_chooser"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/monsterHeadline"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/monsterlvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/monsterHeadline"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/monster_lvl" />

        <TextView
            android:text="@string/element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/monster_lvl"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/monster_element" />

        <TextView
            android:text="@string/monster_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/monster_element"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/monster_hp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/current_lvl"
            android:inputType="number"
            android:layout_below="@+id/monster_chooser"
            android:layout_marginLeft="148dp"
            android:layout_marginStart="148dp"
            android:hint="@string/aktuelles_level" />

        <CheckBox
            android:text="@string/master_hero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/current_lvl"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/hero_cbx" />

        <CheckBox
            android:text="@string/level_1_leech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hero_cbx"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/lvl1_leech" />

        <TextView
            android:text="@string/spielerdaten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/monster_hp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/characterHeadline"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/characterHeadline"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/exp_to_next_level" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exp_to_next_level"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/mobs_to_be_killed" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@+id/exp_to_next_level"
            android:layout_alignLeft="@+id/current_lvl"
            android:layout_alignStart="@+id/current_lvl"
            android:id="@+id/bonus_through_amps"
            android:hint="@string/bonus_durch_scrolls"
            android:inputType="numberDecimal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@+id/bonus_through_amps"
            android:layout_alignLeft="@+id/bonus_through_amps"
            android:layout_alignStart="@+id/bonus_through_amps"
            android:id="@+id/bonus_through_event"
            android:hint="@string/bonus_durch_event"
            android:inputType="numberSigned" />

        <Button
            android:text="@string/analysieren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bonus_through_event"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/calculate_btn" />

    </RelativeLayout>

</FrameLayout>
