<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.klinger2709.klingerju.flyffmanager.MoreUpgradesFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:id="@+id/item_selector" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_aktuelle_stufe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_selector"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/aktuelle_stufe"
                android:hint="@string/aktuelle_stufe"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_wunschstufe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_aktuelle_stufe"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/wunschstufe"
                android:hint="@string/wunschstufe"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_wahrscheinlichkeit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_wunschstufe"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/wahrscheinlichkeit"
                android:hint="@string/wahrscheinlichkeit_in"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:text="@string/upgrade_chancen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_selector"
            android:id="@+id/chance_list" />

        <Button
            android:id="@+id/calculate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/berechnen"
            android:layout_below="@+id/layout_wahrscheinlichkeit"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/layout_wahrscheinlichkeit"
            android:layout_alignStart="@+id/layout_wahrscheinlichkeit"
            android:background="@drawable/button"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ergebnis"
            android:id="@+id/ergebnis"
            android:textColor="@color/my_dark_blue"
            android:layout_below="@+id/calculate_btn"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/calculate_btn"
            android:layout_alignStart="@+id/calculate_btn" />
    </RelativeLayout>
</FrameLayout>
