<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.klinger2709.klingerju.flyffmanager.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/icon"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView2"
            android:layout_marginTop="20dp" />

        <TextView
            android:text="@string/schreib_mir_dazu_entweder_eine_e_mail_an_gaming_julian94_gmail_com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textColor="@color/my_dark_blue"
            android:textAlignment="center"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="18dp" />

        <TextView
            android:text="@string/oder_auf_dem_server_murano_an"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:id="@+id/textView5"
            android:textColor="@color/my_dark_blue"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/herzlich_willkommen_n_ndas_ist_der_erste_entwurf_vom_flyff_manager_n_nschau_doch_mal_ins_men_und_klick_dich_durch_n_n_ber_feedback_w_rde_ich_mich_riesig_freuen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="@color/my_dark_blue"
            android:textAlignment="center"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:text="@string/yourfriendlyrm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:id="@+id/textView3"
            android:textStyle="normal|bold"
            android:textColor="@color/my_dark_blue"
            android:textSize="18sp" />

    </RelativeLayout>
</FrameLayout>
